--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             justify-content: center;
             margin-left: auto;
             margin-right: auto;
+            transform: translateX(25px); /* → 右に10pxずらす */
         }
 
 
@@ -121,9 +122,9 @@
         .playhead {
             position: absolute;
             bottom: 100px;
-            left: 190px;
+            left: 240px;
             display: flex;
-            gap: 26px;
+            gap: 23px;
         }
 
         .dot {
@@ -141,9 +142,9 @@
         .controls {
             position: absolute;
             bottom: 75px;
-            left: 30px;
+            left: 70px;
             display: flex;
-            gap: 8px;
+            gap: 0px;
         }
 
         .control-button {
@@ -301,6 +302,7 @@
             gap: 4px;
             margin-top: 250px;
             position: relative;
+
         }
 
         #preset-arrow {
@@ -392,6 +394,9 @@
     </div>
 
     <img src="sign.png" id="signature">
+
+   
+
 
 
     <>
@@ -1462,7 +1467,7 @@
 
 
     </script>
-        <!-- last updated: 2025-06-06 -->
+    <!-- last updated: 2025-06-08 -->
 
 </body>
 </html>
