--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             justify-content: center;
             margin-left: auto;
             margin-right: auto;
-            transform: translateX(20px); /* → 右に10pxずらす */
+            transform: translateX(15px); /* → 右に10pxずらす */
         }
 
 
@@ -348,6 +348,13 @@
             #signature:hover {
                 opacity: 1;
             }
+
+        @media screen and (max-width: 1024px) and (orientation: portrait) {
+            #sequencer-ui {
+                transform: translateX(-10px); /* ← iPad縦向きのときだけ中央に戻す */
+            }
+        }
+
 
     </style>
 </head>
